# staticdir

./: Cargo.toml
src/: respond_with_dir.rs  static_dir.rs
