[package]
name = "staticdir"
description = "Providing list of directory entries for Iron framework"
version = "0.3.2"
authors = ["franza <nico.franza@gmail.com>"]
keywords = ["iron", "http", "static", "folder", "directory"]
license-file = "LICENSE"
readme = "README.md"
documentation = "http://franza.github.io/staticdir/index.html"
homepage = "https://github.com/franza/staticdir"
repository = "https://github.com/franza/staticdir"

[dependencies]
rustc-serialize = "0.3"
iron = "0.6"
url = "0.5"
filetime = "0.2.6"

[dev-dependencies]
staticfile = "0.5.0"
mount = "0.4.0"
iron-test = "0.6"
